# ML-LITE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/ML-LITE/: decision_tree.h  k_means.h  linear_regression.h  model.h  perceptron.h
include/ML-LITE/supervised/: linear_regression.h  logistic_regression.h  perceptron.h  support_vector_machine.h
include/ML-LITE/utils/: utils.h
notes/: notes.tex
src/: decision_tree.cpp  k_means.cpp  linear_regression.cpp  main.cpp  perceptron.cpp
src/supervised/: decision_tree.cpp  linear_regression.cpp  logistic_regression.cpp  perceptron.cpp  support_vector_machine.cpp
src/unsupervised/: k_means.cpp
src/utils/: utils.cpp
test/: test_linear_regression.cpp  test_perceptron.cpp  test_utils.cpp
